bad/func_call_undeclared_function.example_compiler_output
ERROR
[1mbad/func_call_undeclared_function.lat:3:2: [1;31merror: [0;1mcall to undeclared function `foo`[m
	foo(42, "");
	[1;32m^[m
